# fraud-detection-ml-system

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflow/: quality_check_flow.yml
.github/workflows/: quality_check_flow.yml
config/: base.yaml
config/autoencoder/: autoencoder.yaml
notebook/: fd-ann-jax-V02.py  fd-ann-jax.ipynb  fd-lr-jax.ipynb  fraud-detection-AE-ANN.ipynb  fraud-detection-MOO.ipynb  fraud-detection.ipynb
src/fraud_detection/clf/config/: __init__.py
src/fraud_detection/clf/config/unsupervised/: autoencoder.py
src/fraud_detection/clf/metrics/: __init__.py  metrics.py
src/fraud_detection/config/: __init__.py  config.py  load_config.py
src/fraud_detection/config/unsupervised/: __init__.py  autoencoder.py
src/fraud_detection/utils/plotting/: __init__.py  plotting.py
test/fraud_detection/: test_config.py
