[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.16.0",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "plotly>=6.3.1",
    "ruff>=0.14.2",
]
