[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.16.0",
    "flax>=0.12.1",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "omegaconf>=2.3.0",
    "optax>=0.2.6",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pip>=25.3",
    "plotly>=6.3.1",
    "pytest>=9.0.1",
    "ruff>=0.14.2",
]

[build-system]
requires = ["uv_build>=0.5.18"]
build-backend = "uv_build"
